--- a/app/src/main/res/layout/not_connected.xml
+++ b/app/src/main/res/layout/not_connected.xml
@@ -25,14 +25,15 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16000003"
-        app:srcCompat="@drawable/no_intenet" />
+        android:tint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_signal_wifi_off_black_24dp" />
 
     <TextView
         android:id="@+id/textView5"
